--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "axios": "^1.4.0",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
+    "pinia": "^2.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1"
   },
@@ -59,6 +61,9 @@
         "error",
         "all"
       ]
-    }
+    },
+    "ignorePatterns": [
+      "/src/scripts/**"
+    ]
   }
 }
