--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.2",
+    "@vueuse/core": "^10.2.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
-    "pinia": "^2.1.3",
+    "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.2",
-    "@iconify-json/carbon": "^1.1.16",
-    "@types/node": "^20.2.3",
-    "@unocss/eslint-config": "^0.52.1",
-    "@unocss/reset": "^0.52.1",
+    "@antfu/eslint-config": "^0.39.5",
+    "@iconify-json/carbon": "^1.1.18",
+    "@types/node": "^20.3.1",
+    "@unocss/eslint-config": "^0.52.7",
+    "@unocss/reset": "^0.52.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue-macros/volar": "^0.9.8",
     "@vue/test-utils": "^2.3.2",
-    "eslint": "^8.41.0",
-    "jsdom": "^22.0.0",
+    "eslint": "^8.43.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.2",
-    "pnpm": "^8.5.1",
+    "pnpm": "^8.6.3",
     "simple-git-hooks": "^2.8.1",
-    "taze": "^0.10.1",
-    "typescript": "^5.0.4",
-    "unocss": "^0.52.1",
-    "unplugin-auto-import": "^0.16.2",
+    "taze": "^0.10.2",
+    "typescript": "^5.1.3",
+    "unocss": "^0.52.7",
+    "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.24.1",
-    "unplugin-vue-macros": "^2.1.7",
-    "vite": "^4.3.8",
+    "unplugin-vue-macros": "^2.3.0",
+    "vite": "^4.3.9",
     "vite-plugin-pages": "^0.30.1",
-    "vitest": "^0.31.1",
-    "vue-tsc": "^1.6.5"
+    "vitest": "^0.31.4",
+    "vue-tsc": "^1.8.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
