--- a/package.json
+++ b/package.json
@@ -12,39 +12,41 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@vueuse/core": "^10.2.0",
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.9",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
     "pinia": "^2.1.4",
+    "sortablejs-plugin-debounce": "^1.0.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.5",
+    "@antfu/eslint-config": "^0.39.7",
     "@iconify-json/carbon": "^1.1.18",
-    "@types/node": "^20.3.1",
+    "@types/node": "^18.16.19",
     "@unocss/eslint-config": "^0.52.7",
     "@unocss/reset": "^0.52.7",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue-macros/volar": "^0.9.8",
-    "@vue/test-utils": "^2.3.2",
-    "eslint": "^8.43.0",
+    "@vue/test-utils": "^2.4.0",
+    "eslint": "^8.44.0",
     "jsdom": "^22.1.0",
-    "lint-staged": "^13.2.2",
-    "pnpm": "^8.6.3",
+    "lint-staged": "^13.2.3",
+    "pnpm": "^8.6.6",
     "simple-git-hooks": "^2.8.1",
-    "taze": "^0.10.2",
-    "typescript": "^5.1.3",
+    "taze": "^0.10.3",
+    "typescript": "^5.1.6",
     "unocss": "^0.52.7",
-    "unplugin-auto-import": "^0.16.4",
+    "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.24.1",
-    "unplugin-vue-macros": "^2.3.0",
-    "vite": "^4.3.9",
+    "unplugin-vue-macros": "^2.3.4",
+    "vite": "^4.4.2",
     "vite-plugin-pages": "^0.30.1",
+    "vite-plugin-vue-devtools": "^0.4.14",
     "vitest": "^0.31.4",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
