--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
     "pinia": "^2.1.4",
+    "sortablejs": "^1.15.0",
     "sortablejs-plugin-debounce": "^1.0.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -63,7 +64,8 @@
       "curly": [
         "error",
         "all"
-      ]
+      ],
+      "no-new": "off"
     },
     "ignorePatterns": [
       "/src/scripts/**"
